--- a/index.html
+++ b/index.html
@@ -60,18 +60,13 @@
     <h2>Certificates</h2>
 
     <div class="card">
-      <h3>Overview of English Language Communication – Lets Upgrade</h3>
-      <img src="IMG_20250901_142844.jpg" alt="English Communication Certificate" class="certificate-img">
-    </div>
-
-    <div class="card">
       <h3>Front End Web Development – Edunet</h3>
-      <img src="IMG_20250901_144050.jpg" alt="Frontend Certificate" class="certificate-img">
+      <img src="edunut.jpg" alt="Frontend Certificate" class="certificate-img">
     </div>
 
     <div class="card">
       <h3>Web Development Fundamentals</h3>
-      <img src="IMG_20250901_145629.jpg" alt="Web Fundamentals Certificate" class="certificate-img">
+      <img src="credly.jpg" alt="Web Fundamentals Certificate" class="certificate-img">
     </div>
   </section>
 
@@ -108,7 +103,7 @@
   <section id="resume" class="resume container reveal">
     <h2>Resume</h2>
     <p>You can download my resume below:</p>
-    <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
+    <a href="resume.jpg" class="btn" target="_blank">Download Resume</a>
   </section>
 
   <!-- Contact -->
