--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Home -->
   <section id="home" class="home container reveal">
     <div class="home-content">
-      <img src="IMG_20250416_074916_936.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
       <h1>Hi, I'm <span>Vishalini T</span></h1>
       <h3>A Passionate Student & Frontend Developer</h3>
       <p>Welcome to my portfolio! Scroll below to know more about me.</p>
