--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <section id="education" class="education container reveal">
     <h2>Education</h2>
     <div class="card"><h3>B.Sc Computer Science</h3><p>Government Arts and Science College, Avinashi</p></div>
-    <div class="card"><h3>HSLC</h3><p>Government Girls Higher Secondary School, Puliampatti</p></div>
-    <div class="card"><h3>SSLC</h3><p>Government Girls Higher Secondary School, Puliampatti</p></div>
+    <div class="card"><h3>HSLC</h3><p>Government higher secondary school saravanapuram</p></div>
+    <div class="card"><h3>SSLC</h3><p>Government higher secondary school saravanapuram</p></div>
   </section>
 
   <!-- Certificates -->
@@ -111,9 +111,9 @@
     <h2>Contact Me</h2>
 
     <div class="card contact-info">
-      <p><i class='bx bx-envelope'></i>  Email: <a href="mailto:subhashreesaravanakumar2909@gmail.com">subhashreesaravanakumar2909@gmail.com</a></p>
-      <p><i class='bx bx-phone'></i>  Phone: <a href="tel:+918438312665">8438312665</a></p>
-      <p><i class='bx bx-map'></i>  Location: Puliampatti</p>
+      <p><i class='bx bx-envelope  '></i>     Email: <a href="mailto:vishalvishalini8@gmail.com">subhashreesaravanakumar2909@gmail.com</a></p>
+      <p><i class='bx bx-phone  '></i>    Phone: <a href="tel:+916381916179">8438312665</a></p>
+      <p><i class='bx bx-map  '></i>     Location: Erode</p>
     </div>
 
     <form class="contact-form card">
