--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <h2>Contact Me</h2>
 
     <div class="card contact-info">
-      <p><i class='bx bx-envelope  '></i>     Email: <a href="mailto:vishalvishalini8@gmail.com">subhashreesaravanakumar2909@gmail.com</a></p>
-      <p><i class='bx bx-phone  '></i>    Phone: <a href="tel:+916381916179">8438312665</a></p>
+      <p><i class='bx bx-envelope  '></i>     Email: <a href="mailto:vishalvishalini8@gmail.com">vishalvishalini8@gmail.com</a></p>
+      <p><i class='bx bx-phone  '></i>    Phone: <a href="tel:+916381916179">6381916179</a></p>
       <p><i class='bx bx-map  '></i>     Location: Erode</p>
     </div>
 
